--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -367,7 +367,19 @@
    "outputs": [],
    "source": [
     "%matplotlib widget\n",
-    "plot_utils.plot_cloud_slice(out_file, ahn_reader, plane_height=1.4)"
+    "plot_utils.plot_bgt_and_cloudslice(tile_code, out_file, ahn_reader, \n",
+    "                                   building_file=bgt_building_file, road_file=bgt_road_file, \n",
+    "                                   point_file=bgt_point_file, plane_height=1., hide_noise=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e25448fe-02bf-4223-87bb-01b195bf088a",
+   "metadata": {},
+   "source": [
+    "This will look like:\n",
+    "\n",
+    "![BGT and LAS labels](https://github.com/Amsterdam-AI-Team/Urban_PointCloud_Processing/raw/main/media/examples/bgt_cloud_slice.png)"
    ]
   },
   {
