--- a/notebooks/1. AHN preprocessing.ipynb
+++ b/notebooks/1. AHN preprocessing.ipynb
@@ -28,7 +28,25 @@
     "\n",
     "import src.preprocessing.ahn_preprocessing as ahn_preprocessing\n",
     "import src.utils.ahn_utils as ahn_utils\n",
-    "import src.utils.las_utils as las_utils"
+    "import src.utils.las_utils as las_utils\n",
+    "import src.utils.plot_utils as plot_utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f62d5f5-6bd7-4ec0-9232-2b2f79fe907d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set-up.\n",
+    "\n",
+    "# The point cloud tile for which a corresponding AHN tile should be created.\n",
+    "tile_code = '2386_9702'\n",
+    "filename = '../datasets/pointcloud/filtered_' + tile_code + '.laz'\n",
+    "\n",
+    "# The folder where AHN data will be saved.\n",
+    "ahn_data_folder = '../datasets/ahn/'"
    ]
   },
   {
@@ -37,18 +55,6 @@
    "metadata": {},
    "source": [
     "## 1a. Clip a single file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6cbcb896-ef19-4c14-9b9b-6f84bb999a94",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# The point cloud tile for which a corresponding AHN tile should be created.\n",
-    "filename = '../datasets/pointcloud/filtered_2386_9702.laz'\n",
-    "tile_code = las_utils.get_tilecode_from_filename(filename)"
    ]
   },
   {
@@ -85,7 +91,7 @@
    "source": [
     "# Clip the corresponding AHN point cloud tile.\n",
     "start = time.time()\n",
-    "ahn_preprocessing.clip_ahn_las_tile(ahn_cloud, filename, out_folder='../datasets/ahn/', buffer=1)\n",
+    "ahn_preprocessing.clip_ahn_las_tile(ahn_cloud, filename, out_folder=ahn_data_folder, buffer=1)\n",
     "end = time.time()\n",
     "print(f'Tile clipped in {end-start:.2f} seconds.')"
    ]
@@ -108,10 +114,9 @@
    "outputs": [],
    "source": [
     "las_folder = '../datasets/pointcloud/'\n",
-    "out_folder = '../datasets/ahn/'\n",
     "\n",
     "# Set resume=True to skip existing files in the out_folder.\n",
-    "ahn_preprocessing.clip_ahn_las_folder(ahn_cloud, las_folder, out_folder=out_folder, buffer=1, resume=False)"
+    "ahn_preprocessing.clip_ahn_las_folder(ahn_cloud, las_folder, out_folder=ahn_data_folder, buffer=1, resume=False)"
    ]
   },
   {
@@ -130,16 +135,24 @@
    "outputs": [],
    "source": [
     "# Load the clipped tile that we have just created.\n",
-    "ahn_las_file = '../datasets/ahn/ahn_2386_9702.laz'\n",
+    "ahn_las_file = ahn_data_folder + '/ahn_' + tile_code + '.laz'\n",
     "\n",
     "start = time.time()\n",
     "# This will create the AHN ground and building surfaces, with a 0.1m resolution, and save them as an .npz file.\n",
-    "_file = ahn_preprocessing.process_ahn_las_tile(ahn_las_file, out_folder='../datasets/ahn/')\n",
+    "_file = ahn_preprocessing.process_ahn_las_tile(ahn_las_file, out_folder=ahn_data_folder)\n",
     "end = time.time()\n",
-    "print(f'Processed LAS tile in {end-start:.2f}s.')\n",
-    "\n",
+    "print(f'Processed LAS tile in {end-start:.2f}s.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19462d26-e59c-40b8-ab1f-2f93d5f35390",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Load the result.\n",
-    "ahn_tile = ahn_utils.load_ahn_tile(_file)"
+    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)"
    ]
   },
   {
@@ -150,26 +163,8 @@
    "outputs": [],
    "source": [
     "# Optional: plot the resulting surfaces.\n",
-    "\n",
     "%matplotlib widget\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(10,5))\n",
-    "im1 = ax1.imshow(ahn_tile['ground_surface'].astype('float64'), interpolation='none')\n",
-    "im2 = ax2.imshow(ahn_tile['building_surface'].astype('float64'), interpolation='none')\n",
-    "ax1.set_title('Ground surface')\n",
-    "ax1.set_xticks(range(0, 501, 100))\n",
-    "ax1.set_xticklabels(np.arange(ahn_tile['x'][0], ahn_tile['x'][-1]+1, 10, dtype=int))\n",
-    "ax1.set_yticks(range(501, 0, -100))\n",
-    "ax1.set_yticklabels(np.arange(ahn_tile['y'][-1], ahn_tile['y'][0]+1, 10, dtype=int))\n",
-    "ax2.set_title('Building surface')\n",
-    "ax2.set_xticks(range(0, 501, 100))\n",
-    "ax2.set_xticklabels(np.arange(ahn_tile['x'][0], ahn_tile['x'][-1]+1, 10, dtype=int))\n",
-    "ax2.set_yticks([])\n",
-    "plt.colorbar(im1, ax=ax1, fraction=0.046, pad=0.04)\n",
-    "plt.colorbar(im2, ax=ax2, fraction=0.046, pad=0.04)\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "plot_utils.plot_ahn_sidebyside(tile_code, ahn_reader)"
    ]
   },
   {
