--- a/notebooks/4. Pole-like objects.ipynb
+++ b/notebooks/4. Pole-like objects.ipynb
@@ -24,8 +24,11 @@
     "import time\n",
     "\n",
     "import src.fusion as fusion\n",
+    "import src.scrapers.ams_bgt_scraper as ams_bgt_scraper\n",
+    "import src.scrapers.ndw_scraper as ndw_scraper\n",
     "import src.region_growing as growing\n",
     "import src.utils.las_utils as las_utils\n",
+    "import src.utils.csv_utils as csv_utils\n",
     "import src.utils.ahn_utils as ahn_utils\n",
     "from src.pipeline import Pipeline\n",
     "from src.utils.labels import Labels"
@@ -49,9 +52,6 @@
     "# Select the point cloud file to process.\n",
     "tilecode = '2386_9702'\n",
     "\n",
-    "# The corresponding BGT data file.\n",
-    "bgt_data_file = '../datasets/bgt/custom_points_' + tilecode + '.csv'\n",
-    "\n",
     "# We need elevation data to determine object height above ground.\n",
     "ahn_data_folder = '../datasets/ahn/'\n",
     "ahn_reader = ahn_utils.NPZReader(data_folder=ahn_data_folder)"
@@ -70,6 +70,51 @@
     "\n",
     "labels = las.label\n",
     "points = np.vstack((las.x, las.y, las.z)).T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aware-retirement",
+   "metadata": {},
+   "source": [
+    "## Scrape point objects from BGT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "weird-workstation",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Specify the bounding box of the area we want to scrape.\n",
+    "bbox = las_utils.get_bbox_from_tile_code(tilecode)\n",
+    "\n",
+    "# The corresponding BGT data file.\n",
+    "bgt_data_file = '../datasets/bgt/custom_points_' + tilecode + '.csv'\n",
+    "csv_headers = ['Type', 'X', 'Y']\n",
+    "\n",
+    "bgt_point_objects_csv = []\n",
+    "# Scrape tree and lamp post data from BGT and parse the json.\n",
+    "for layer in ['BGTPLUS_PAL_lichtmast', 'BGTPLUS_VGT_boom']:\n",
+    "    # Scrape data from the Amsterdam WFS, this will return a json response.\n",
+    "    json_content = ams_bgt_scraper.scrape_amsterdam_bgt(layer, bbox=bbox)\n",
+    "    \n",
+    "    # Parse the downloaded json response.\n",
+    "    parsed_content = ams_bgt_scraper.parse_points_bgtplus(json_content)\n",
+    "    bgt_point_objects_csv += parsed_content\n",
+    "\n",
+    "# Scrape traffic sign data from NDW and parse the json.\n",
+    "json_content = ndw_scraper.scrape_ndw()\n",
+    "\n",
+    "# Parse the downloaded json response.\n",
+    "parsed_content = ndw_scraper.parse_traffic_signs(json_content, bbox)\n",
+    "bgt_point_objects_csv += parsed_content\n",
+    "\n",
+    "# Write the csv\n",
+    "csv_utils.write_csv(bgt_data_file, bgt_point_objects_csv, csv_headers)"
    ]
   },
   {
@@ -191,7 +236,7 @@
    "source": [
     "# Process the point cloud.\n",
     "exclude_labels = (Labels.GROUND, Labels.BUILDING, Labels.CAR, Labels.TREE, Labels.STREET_LIGHT, Labels.TRAFFIC_SIGN)\n",
-    "process_sequence = (light_lcc, sign_lcc, tree_lcc)\n",
+    "process_sequence = (light_grower, sign_grower, tree_grower)\n",
     "pipeline = Pipeline(process_sequence, exclude_labels, caching=False)\n",
     "\n",
     "start = time.time()\n",
