--- a/notebooks/6. Location of instance.ipynb
+++ b/notebooks/6. Location of instance.ipynb
@@ -12,88 +12,72 @@
     "\n",
     "import time\n",
     "import numpy as np\n",
+    "import glob\n",
     "\n",
     "from src.region_growing.label_connected_comp import LabelConnectedComp\n",
-    "from src.utils.las_utils import read_las\n",
+    "from src.utils.las_utils import read_las, label_and_save_las\n",
     "from src.utils.labels import Labels"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2f2e781",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tilecode = '2386_9702'\n",
-    "\n",
-    "in_file = '../datasets/pointcloud/processed_' + tilecode + '.laz'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3aec2518",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pointcloud = read_las(in_file)\n",
-    "points = np.vstack((pointcloud.x, pointcloud.y, pointcloud.z)).T\n",
-    "labels = pointcloud.label"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9255089",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mask = labels == Labels.STREET_LIGHT"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "565cd2f2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lcc = LabelConnectedComp(Labels.STREET_LIGHT)\n",
-    "point_components = lcc.get_components(points[mask])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "017d4ec6",
+   "id": "66058a30",
    "metadata": {},
    "outputs": [],
    "source": [
     "min_component_size = 500\n",
     "max_component_size = 10000\n",
+    "min_component_height = 4\n",
     "\n",
-    "mask_indices = np.where(mask)[0]\n",
-    "    \n",
-    "cc_labels, counts = np.unique(point_components,\n",
-    "                              return_counts=True)\n",
+    "def get_cluster_dim(point_components, mask, points):\n",
+    "    mask_indices = np.where(mask)[0]\n",
     "\n",
-    "cc_labels_filtered = cc_labels[(counts >= min_component_size) & (counts <= max_component_size)]\n",
+    "    cc_labels, counts = np.unique(point_components,\n",
+    "                                  return_counts=True)\n",
     "\n",
-    "for cc in cc_labels_filtered:\n",
-    "    # select points that belong to the cluster\n",
-    "    cc_mask = (point_components == cc)\n",
+    "    cc_labels_filtered = cc_labels[(counts >= min_component_size) & (counts <= max_component_size)]\n",
+    "\n",
+    "    for cc in cc_labels_filtered:\n",
+    "        # select points that belong to the cluster\n",
+    "        cc_mask = (point_components == cc)\n",
+    "\n",
+    "        xyz = points[mask_indices[cc_mask]]\n",
+    "        x_points = xyz[:,0]\n",
+    "        y_points = xyz[:,1]\n",
+    "        z_points = xyz[:,2]\n",
+    "        z_min, z_max = np.min(z_points), np.max(z_points)\n",
+    "\n",
+    "        if (z_max - z_min) > min_component_height:\n",
+    "            # Calculate the centroid of the cluster\n",
+    "            centroid = (round(sum(x_points) / len(xyz),2), round(sum(y_points) / len(xyz),2))\n",
+    "            print(centroid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7631620",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save = True\n",
+    "for tile in glob.glob(\"../datasets/pointcloud/*.laz\"):\n",
+    "    tilename = tile.split(\"/\")[-1]\n",
+    "    pointcloud = read_las(tile)\n",
+    "    pointcloud_pred = read_las(\"../datasets/pointcloud/pred/\" + tilename)\n",
+    "    points = np.vstack((pointcloud.x, pointcloud.y, pointcloud.z)).T\n",
+    "    labels = pointcloud_pred.label   \n",
+    "\n",
+    "    mask = labels == Labels.STREET_LIGHT\n",
     "    \n",
-    "    xyz = points[mask_indices[cc_mask]]\n",
-    "    x_points = xyz[:,0]\n",
-    "    y_points = xyz[:,1]\n",
+    "    lcc = LabelConnectedComp(Labels.STREET_LIGHT)\n",
+    "    point_components = lcc.get_components(points[mask])\n",
     "    \n",
-    "    # Calculate the centroid of the cluster\n",
-    "    centroid = (round(sum(x_points) / len(xyz),2), round(sum(y_points) / len(xyz),2))\n",
-    "    print(centroid)\n",
+    "    get_cluster_dim(point_components, mask, points)\n",
     "    \n",
-    "    plt.scatter(x_points, y_points, alpha=0.5)\n",
-    "plt.show()"
+    "    if save:\n",
+    "        label_and_save_las(pointcloud, pointcloud_pred.label, \"../datasets/pointcloud/merged/\" + tilename)"
    ]
   },
   {
