Update 6. Location of instance.ipynb

--- a/notebooks/6. Location of instance.ipynb
+++ b/notebooks/6. Location of instance.ipynb
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66058a30",
+   "id": "aa14594e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +38,7 @@
     "\n",
     "    cc_labels_filtered = cc_labels[(counts >= min_component_size) & (counts <= max_component_size)]\n",
     "\n",
+    "    xy_locations_per_tile = []\n",
     "    for cc in cc_labels_filtered:\n",
     "        # select points that belong to the cluster\n",
     "        cc_mask = (point_components == cc)\n",
@@ -51,17 +52,20 @@
     "        if (z_max - z_min) > min_component_height:\n",
     "            # Calculate the centroid of the cluster\n",
     "            centroid = (round(sum(x_points) / len(xyz),2), round(sum(y_points) / len(xyz),2))\n",
-    "            print(centroid)"
+    "            xy_locations_per_tile.append(centroid)\n",
+    "    \n",
+    "    return xy_locations_per_tile"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7631620",
+   "id": "142f46d0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "save = True\n",
+    "xy_locations = []\n",
+    "\n",
     "for tile in glob.glob(\"../datasets/pointcloud/*.laz\"):\n",
     "    tilename = tile.split(\"/\")[-1]\n",
     "    pointcloud = read_las(tile)\n",
@@ -74,10 +78,11 @@
     "    lcc = LabelConnectedComp(Labels.STREET_LIGHT)\n",
     "    point_components = lcc.get_components(points[mask])\n",
     "    \n",
-    "    get_cluster_dim(point_components, mask, points)\n",
+    "    xy_locations_per_tile = get_cluster_dim(point_components, mask, points)\n",
     "    \n",
-    "    if save:\n",
-    "        label_and_save_las(pointcloud, pointcloud_pred.label, \"../datasets/pointcloud/merged/\" + tilename)"
+    "    xy_locations.extend(xy_locations_per_tile)\n",
+    "    \n",
+    "print(xy_locations)"
    ]
   },
   {
