Update 6. Location of instance.ipynb

--- a/notebooks/6. Location of instance.ipynb
+++ b/notebooks/6. Location of instance.ipynb
@@ -22,7 +22,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa14594e",
+   "id": "218546c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Original pointcloud data folder.\n",
+    "orig_pc_folder = '../datasets/pointcloud/'\n",
+    "# Predicted pointcloud labels data folder.\n",
+    "pred_pc_folder = '../datasets/pointcloud/pred/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c2c289e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,12 +44,17 @@
     "min_component_height = 4\n",
     "\n",
     "def get_cluster_dim(point_components, mask, points):\n",
+    "    \"\"\"\n",
+    "    Get the dimensions of a cluster and return the coordinates\n",
+    "    of the middlepoint.\n",
+    "    \"\"\"\n",
     "    mask_indices = np.where(mask)[0]\n",
     "\n",
     "    cc_labels, counts = np.unique(point_components,\n",
     "                                  return_counts=True)\n",
     "\n",
-    "    cc_labels_filtered = cc_labels[(counts >= min_component_size) & (counts <= max_component_size)]\n",
+    "    cc_labels_filtered = cc_labels[(counts >= min_component_size) \n",
+    "                                   & (counts <= max_component_size)]\n",
     "\n",
     "    xy_locations_per_tile = []\n",
     "    for cc in cc_labels_filtered:\n",
@@ -51,7 +69,8 @@
     "\n",
     "        if (z_max - z_min) > min_component_height:\n",
     "            # Calculate the centroid of the cluster\n",
-    "            centroid = (round(sum(x_points) / len(xyz),2), round(sum(y_points) / len(xyz),2))\n",
+    "            centroid = (round(sum(x_points) / len(xyz),2), \n",
+    "                        round(sum(y_points) / len(xyz),2))\n",
     "            xy_locations_per_tile.append(centroid)\n",
     "    \n",
     "    return xy_locations_per_tile"
@@ -60,16 +79,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "142f46d0",
+   "id": "655606d7",
    "metadata": {},
    "outputs": [],
    "source": [
     "xy_locations = []\n",
     "\n",
-    "for tile in glob.glob(\"../datasets/pointcloud/*.laz\"):\n",
+    "for tile in glob.glob(orig_pc_folder + \"*.laz\"):\n",
     "    tilename = tile.split(\"/\")[-1]\n",
     "    pointcloud = read_las(tile)\n",
-    "    pointcloud_pred = read_las(\"../datasets/pointcloud/pred/\" + tilename)\n",
+    "    pointcloud_pred = read_las(pred_pc_folder + tilename)\n",
     "    points = np.vstack((pointcloud.x, pointcloud.y, pointcloud.z)).T\n",
     "    labels = pointcloud_pred.label   \n",
     "\n",
