Update 6. Location of instance.ipynb

--- a/notebooks/6. Location of instance.ipynb
+++ b/notebooks/6. Location of instance.ipynb
@@ -15,8 +15,9 @@
     "import glob\n",
     "\n",
     "from src.region_growing.label_connected_comp import LabelConnectedComp\n",
-    "from src.utils.las_utils import read_las, label_and_save_las\n",
-    "from src.utils.labels import Labels"
+    "from src.utils.las_utils import read_las\n",
+    "from src.utils.labels import Labels\n",
+    "from src.utils.csv_utils import write_csv"
    ]
   },
   {
@@ -29,7 +30,9 @@
     "# Original pointcloud data folder.\n",
     "orig_pc_folder = '../datasets/pointcloud/'\n",
     "# Predicted pointcloud labels data folder.\n",
-    "pred_pc_folder = '../datasets/pointcloud/pred/'"
+    "pred_pc_folder = '../datasets/pointcloud/pred/'\n",
+    "# Predicted pointcloud labels data folder.\n",
+    "pole_locations_path = '../datasets/lamp_post_locations.csv'"
    ]
   },
   {
@@ -39,6 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# We try to ignore the false positive lamp posts using these settings\n",
     "min_component_size = 500\n",
     "max_component_size = 10000\n",
     "min_component_height = 4\n",
@@ -101,13 +105,13 @@
     "    \n",
     "    xy_locations.extend(xy_locations_per_tile)\n",
     "    \n",
-    "print(xy_locations)"
+    "write_csv(pole_locations_path, xy_locations, csv_headers=['rd_x', 'rd_y'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f79c96b",
+   "id": "bae9b4e8",
    "metadata": {},
    "outputs": [],
    "source": []
