--- a/notebooks/6. Location of instance.ipynb
+++ b/notebooks/6. Location of instance.ipynb
@@ -45,7 +45,7 @@
     "# We try to ignore the false positive lamp posts using these settings\n",
     "min_component_size = 500\n",
     "max_component_size = 10000\n",
-    "min_component_height = 4\n",
+    "min_component_height = 3.5\n",
     "\n",
     "def get_cluster_dim(point_components, mask, points):\n",
     "    \"\"\"\n",
@@ -98,12 +98,13 @@
     "\n",
     "    mask = labels == Labels.STREET_LIGHT\n",
     "    \n",
-    "    lcc = LabelConnectedComp(Labels.STREET_LIGHT)\n",
-    "    point_components = lcc.get_components(points[mask])\n",
-    "    \n",
-    "    xy_locations_per_tile = get_cluster_dim(point_components, mask, points)\n",
-    "    \n",
-    "    xy_locations.extend(xy_locations_per_tile)\n",
+    "    if np.count_nonzero(mask) > 0:\n",
+    "        lcc = LabelConnectedComp(Labels.STREET_LIGHT)\n",
+    "        point_components = lcc.get_components(points[mask])\n",
+    "        \n",
+    "        xy_locations_per_tile = get_cluster_dim(point_components, mask, points)\n",
+    "        \n",
+    "        xy_locations.extend(xy_locations_per_tile)\n",
     "    \n",
     "write_csv(pole_locations_path, xy_locations, csv_headers=['rd_x', 'rd_y'])"
    ]
@@ -119,7 +120,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -133,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
