Option to flag whether extracted pole is inside a BGT polygon (e.g. building).

--- a/notebooks/Analysis.ipynb
+++ b/notebooks/Analysis.ipynb
@@ -15,9 +15,10 @@
     "import numpy as np\n",
     "\n",
     "from src.utils.labels import Labels\n",
-    "from src.utils.csv_utils import write_csv\n",
     "import src.analysis.analysis_tools as analysis_tools\n",
     "import src.utils.ahn_utils as ahn_utils\n",
+    "import src.utils.bgt_utils as bgt_utils\n",
+    "import src.utils.csv_utils as csv_utils\n",
     "import src.utils.las_utils as las_utils\n",
     "import src.utils.log_utils as log_utils"
    ]
@@ -56,7 +57,10 @@
    "source": [
     "# AHN data folder.\n",
     "ahn_data_folder = '../datasets/ahn/'\n",
-    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder, caching=False)"
+    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder, caching=False)\n",
+    "\n",
+    "bgt_building_file = '../datasets/bgt/bgt_buildings_demo.csv'\n",
+    "bld_reader = bgt_utils.BGTPolyReader(bgt_building_file, building_offset=0)"
    ]
   },
   {
@@ -88,9 +92,22 @@
     "target_label = Labels.STREET_LIGHT\n",
     "ground_label = Labels.GROUND\n",
     "\n",
-    "locations = analysis_tools.get_pole_locations_pred(cloud_folder, pred_folder, target_label, ground_label, ahn_reader=None,\n",
+    "HEADERS = ['rd_x', 'rd_y', 'z', 'tx', 'ty', 'tz', 'height', 'angle', 'prob', 'n_points', 'in_bld', 'debug', 'tilecode']\n",
+    "\n",
+    "locations = analysis_tools.get_pole_locations_pred(cloud_folder, pred_folder, target_label, ground_label, \n",
+    "                                                   ahn_reader=ahn_reader, bld_reader=bld_reader,\n",
     "                                                   cloud_prefix=cloud_prefix, pred_prefix=pred_prefix,\n",
-    "                                                   min_component_size=min_component_size, return_counts=True)"
+    "                                                   min_component_size=min_component_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78d7d858-bb3a-4f81-947a-307210f52773",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csv_utils.write_csv(pole_locations_path, locations, csv_headers=HEADERS)"
    ]
   },
   {
@@ -107,13 +124,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e242c5b-d84d-44f9-8911-573d3ffb86e0",
+   "id": "8a253164-56b0-4578-9b42-6adc31739eeb",
    "metadata": {},
    "outputs": [],
    "source": [
     "# AHN data folder.\n",
     "ahn_data_folder = '../../datasets/Weesp/ahn_tiles/'\n",
-    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder, caching=False)"
+    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder, caching=False)\n",
+    "\n",
+    "bgt_building_file = '../../datasets/Weesp/bgt/bgt_buildings_weesp.csv'\n",
+    "bld_reader = bgt_utils.BGTPolyReader(bgt_building_file, building_offset=0)"
    ]
   },
   {
@@ -124,10 +144,10 @@
    "outputs": [],
    "source": [
     "# Original pointcloud data folder.\n",
-    "orig_folder = '../../datasets/Weesp_test2/'\n",
+    "orig_folder = '../../datasets/Weesp_test/'\n",
     "orig_prefix = 'merged'\n",
     "# Predicted pointcloud labels data folder.\n",
-    "pred_folder = '../../datasets/Weesp_test2/'\n",
+    "pred_folder = '../../datasets/Weesp_test/'\n",
     "pred_prefix = 'merged'\n",
     "# File to write pole location to.\n",
     "pole_locations_path = 'lamp_posts_weesp_test.csv'"
@@ -178,7 +198,7 @@
     "target_label = Labels.STREET_LIGHT\n",
     "ground_label = Labels.GROUND\n",
     "\n",
-    "HEADERS = ['rd_x', 'rd_y', 'z', 'tx', 'ty', 'tz', 'height', 'angle', 'prob', 'n_points', 'debug', 'tilecode']\n",
+    "HEADERS = ['rd_x', 'rd_y', 'z', 'tx', 'ty', 'tz', 'height', 'angle', 'prob', 'n_points', 'in_bld', 'debug', 'tilecode']\n",
     "\n",
     "locations = analysis_tools.get_pole_locations_pred(orig_folder, pred_folder, target_label, ground_label, ahn_reader,\n",
     "                                                   cloud_prefix=orig_prefix, pred_prefix=pred_prefix,\n",
@@ -192,28 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_csv(pole_locations_path, locations, csv_headers=HEADERS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0d4db78-048e-4677-9ec2-97c74a6d51c6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(locations, columns=HEADERS)\n",
-    "df[df.angle == 0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14afc962-bfe4-4cf0-a3c5-27a9e2b0741f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[df.prob < df.prob.mean() - df.prob.std()]"
+    "csv_utils.write_csv(pole_locations_path, locations, csv_headers=HEADERS)"
    ]
   },
   {
@@ -712,7 +711,7 @@
     "import laspy\n",
     "from src.utils import clip_utils\n",
     "\n",
-    "HEADERS = ['rd_x', 'rd_y', 'z', 'tx', 'ty', 'tz', 'height', 'angle', 'prob', 'n_points', 'debug']\n",
+    "HEADERS = ['rd_x', 'rd_y', 'z', 'tx', 'ty', 'tz', 'height', 'angle', 'prob', 'n_points', 'in_bld', 'debug', 'tilecode']\n",
     "\n",
     "# las = laspy.read('../datasets/pointcloud/processed_2397_9705.laz')\n",
     "las = laspy.read('../../datasets/Weesp/predicted_rgbi/merged_2621_9612.laz')\n",
