Dynamic octree level for Car fuser.

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -144,7 +144,7 @@
    "source": [
     "# Car fuser using a clustering algorithm and BGT road data.\n",
     "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, bgt_file=bgt_road_file,\n",
-    "                            octree_level=10, min_component_size=5000,\n",
+    "                            grid_size=0.05, min_component_size=5000,\n",
     "                            min_height=1.2, max_height=2.4,\n",
     "                            min_width=1.4, max_width=2.4,\n",
     "                            min_length=3.0, max_length=6.0)"
@@ -405,7 +405,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -419,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
