--- a/notebooks/3. Cars.ipynb
+++ b/notebooks/3. Cars.ipynb
@@ -113,7 +113,7 @@
     "# Car fuser using a clustering algorithm and BGT road data.\n",
     "# To find appropriate dimension ranges, see e.g. https://nl.automobiledimension.com/.\n",
     "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, bgt_file=bgt_data_file,\n",
-    "                            octree_level=10, min_component_size=5000,\n",
+    "                            grid_size=0.05, min_component_size=5000,\n",
     "                            min_height=1.2, max_height=2.4,\n",
     "                            min_width=1.4, max_width=2.4,\n",
     "                            min_length=3.0, max_length=6.0)"
@@ -173,7 +173,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -187,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
