--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -203,8 +203,8 @@
    "outputs": [],
    "source": [
     "# We do this separately for the top and bottom since the best settings for each might differ.\n",
-    "building_top = {'bottom': 12., 'octree_level': 9, 'threshold': 0.5}\n",
-    "building_bottom = {'bottom': 0.5, 'top': 12., 'octree_level': 10, 'threshold': 0.5}\n",
+    "building_top = {'bottom': 12., 'grid_size': 0.1, 'threshold': 0.5}\n",
+    "building_bottom = {'bottom': 0.5, 'top': 12., 'grid_size': 0.05, 'threshold': 0.5}\n",
     "\n",
     "building_grower = growing.LayerLCC(Labels.BUILDING, ahn_reader, \n",
     "                                   params=[building_top, building_bottom])"
@@ -229,15 +229,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "light_bottom = {'top': 1.75, 'octree_level': 10, 'threshold': 0.5}\n",
-    "light_top = {'bottom': 1.75, 'octree_level': 9, 'threshold': 0.05}\n",
+    "light_bottom = {'top': 1.75, 'grid_size': 0.05, 'threshold': 0.5}\n",
+    "light_top = {'bottom': 1.75, 'grid_size': 0.1, 'threshold': 0.05}\n",
     "\n",
-    "sign_bottom = {'top': 1.5, 'octree_level': 10, 'threshold': 0.5}\n",
-    "sign_top = {'bottom': 1.5, 'octree_level': 9, 'threshold': 0.05}\n",
+    "sign_bottom = {'top': 1.5, 'grid_size': 0.05, 'threshold': 0.5}\n",
+    "sign_top = {'bottom': 1.5, 'grid_size': 0.1, 'threshold': 0.05}\n",
     "\n",
-    "tree_bottom = {'top': 1.75, 'octree_level': 10, 'threshold': 0.8}\n",
-    "tree_middle = {'bottom': 1.75, 'top':10.0, 'octree_level': 9, 'threshold': 0.01}\n",
-    "tree_top = {'bottom': 6.0, 'octree_level': 8, 'threshold': 0.01}\n",
+    "tree_bottom = {'top': 1.75, 'grid_size': 0.05, 'threshold': 0.8}\n",
+    "tree_middle = {'bottom': 1.75, 'top':10.0, 'grid_size': 0.1, 'threshold': 0.01}\n",
+    "tree_top = {'bottom': 6.0, 'grid_size': 0.2, 'threshold': 0.01}\n",
     "\n",
     "light_grower = growing.LayerLCC(Labels.STREET_LIGHT, ahn_reader, \n",
     "                                params=[light_bottom, light_top])\n",
@@ -419,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
