--- a/notebooks/4. Pole-like objects.ipynb
+++ b/notebooks/4. Pole-like objects.ipynb
@@ -204,27 +204,28 @@
     "# Each layer has the following (default) parameters:\n",
     "# params = {'bottom': -inf,        # Height above ground at which the layer starts.\n",
     "#           'top': inf,            # Height above ground at which the layer stops.\n",
-    "#           'octree_level': 9,     # Octree level for LCC method, higher means more fine-grained.\n",
+    "#           'grid_size': 0.1       # Octree grid size for LCC method, in meters. Lower means a more fine-grained clustering.\n",
     "#           'min_comp_size': 100,  # Minimum number of points for a component to be considered.\n",
     "#           'threshold': 0.5}      # Minimum fraction of points in a component that are already labelled initially for the component to be added.\n",
     "\n",
     "# Parameter settings for the different layers.\n",
-    "light_top = {'bottom': 1.75, 'octree_level': 9, 'threshold': 0.05}\n",
-    "light_bottom = {'top': 1.75, 'octree_level': 10, 'threshold': 0.5}\n",
+    "light_bottom = {'top': 1.75, 'grid_size': 0.05, 'threshold': 0.5}\n",
+    "light_top = {'bottom': 1.75, 'grid_size': 0.1, 'threshold': 0.05}\n",
     "\n",
-    "sign_top = {'bottom': 1.5, 'octree_level': 9, 'threshold': 0.05}\n",
-    "sign_bottom = {'top': 1.5, 'octree_level': 10, 'threshold': 0.5}\n",
+    "sign_bottom = {'top': 1.5, 'grid_size': 0.05, 'threshold': 0.5}\n",
+    "sign_top = {'bottom': 1.5, 'grid_size': 0.1, 'threshold': 0.05}\n",
     "\n",
-    "tree_top = {'bottom': 1.75, 'octree_level': 9, 'threshold': 0.01}\n",
-    "tree_bottom = {'top': 1.75, 'octree_level': 10, 'threshold': 0.8}\n",
+    "tree_bottom = {'top': 1.75, 'grid_size': 0.05, 'threshold': 0.8}\n",
+    "tree_middle = {'bottom': 1.75, 'top':10.0, 'grid_size': 0.1, 'threshold': 0.01}\n",
+    "tree_top = {'bottom': 6.0, 'grid_size': 0.2, 'threshold': 0.01}\n",
     "\n",
     "# Create the region growing objects.\n",
     "light_grower = growing.LayerLCC(Labels.STREET_LIGHT, ahn_reader, \n",
     "                                params=[light_top, light_bottom])\n",
     "sign_grower = growing.LayerLCC(Labels.TRAFFIC_SIGN, ahn_reader, \n",
     "                               params=[sign_top, sign_bottom])\n",
-    "tree_grower = growing.LayerLCC(Labels.TREE, ahn_reader, \n",
-    "                               params=[tree_top, tree_bottom])"
+    "tree_grower = growing.LayerLCC(Labels.TREE, ahn_reader, reset_noise=True,\n",
+    "                               params=[tree_bottom, tree_middle, tree_top])"
    ]
   },
   {
@@ -276,7 +277,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -290,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
