--- a/notebooks/5. Region growing.ipynb
+++ b/notebooks/5. Region growing.ipynb
@@ -91,7 +91,7 @@
    "source": [
     "# Region growing with building points as initial seed points. \n",
     "region_growing_clustering = growing.LabelConnectedComp(label=Labels.BUILDING,\n",
-    "                                                       octree_level=10,\n",
+    "                                                       grid_size=0.05,\n",
     "                                                       min_component_size=100)"
    ]
   },
@@ -108,7 +108,7 @@
     "```\n",
     "params = {'bottom': -inf,        # Height above ground at which the layer starts.\n",
     "          'top': inf,            # Height above ground at which the layer stops.\n",
-    "          'octree_level': 9,     # Octree level for LCC method, higher means more fine-grained.\n",
+    "          'grid_size': 0.1       # Octree grid size for LCC method, in meters. Lower means a more fine-grained clustering.\n",
     "          'min_comp_size': 100,  # Minimum number of points for a component to be considered.\n",
     "          'threshold': 0.5}      # Minimum fraction of points in a component that are already \n",
     "                                 # labelled initially for the component to be added.\n",
@@ -121,8 +121,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "building_top = {'bottom': 12., 'octree_level': 9, 'threshold': 0.5}\n",
-    "building_bottom = {'bottom': 0.5, 'top': 12., 'octree_level': 10, 'threshold': 0.5}\n",
+    "building_top = {'bottom': 12., 'grid_size': 0.1, 'threshold': 0.5}\n",
+    "building_bottom = {'bottom': 0.5, 'top': 12., 'grid_size': 0.05, 'threshold': 0.5}\n",
     "\n",
     "# We need AHN elevation data to determine the height above ground.\n",
     "ahn_data_folder = '../datasets/ahn/'\n",
@@ -191,7 +191,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -205,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
