Separate scrape code

--- a/notebooks/2. Ground and Buildings.ipynb
+++ b/notebooks/2. Ground and Buildings.ipynb
@@ -30,7 +30,6 @@
     "import src.utils.ahn_utils as ahn_utils\n",
     "import src.utils.las_utils as las_utils\n",
     "import src.utils.csv_utils as csv_utils\n",
-    "import src.scrapers.ams_bgt_scraper as ams_bgt_scraper\n",
     "from src.utils.labels import Labels"
    ]
   },
@@ -51,8 +50,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Data folder for the fusers.\n",
+    "# Data folder and file for the fusers.\n",
     "ahn_data_folder = '../datasets/ahn/'\n",
+    "bgt_data_file = '../datasets/bgt/bgt_buildings_demo.csv'\n",
+    "\n",
     "# Create the reader for .npz data.\n",
     "npz_reader = ahn_utils.NPZReader(ahn_data_folder)\n",
     "\n",
@@ -121,31 +122,7 @@
    "metadata": {},
    "source": [
     "### [Alternative] Building fuser using BGT data\n",
-    "First, download and parse the required BGT data. E.g. for our demo point cloud, run the following cell: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aquatic-gauge",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Data folder and file for the BGT fuser.\n",
-    "bgt_data_file = '../datasets/bgt/bgt_buildings.csv'\n",
-    "\n",
-    "# Specify the bounding box of the area we want to scrape.\n",
-    "# For example, we can find the bounding box of a LAS file.\n",
-    "bbox_padded = las_utils.get_bbox_from_las_folder('../datasets/pointcloud/', padding=10)\n",
-    "\n",
-    "# Scrape data from the Amsterdam WFS, this will return a json response.\n",
-    "json_response = ams_bgt_scraper.scrape_amsterdam_bgt('BGT_PND_pand', bbox=bbox_padded)\n",
-    "\n",
-    "# Parse the downloaded json response.\n",
-    "parsed_content, csv_headers = ams_bgt_scraper.parse_buildings(json_response, prepare_csv=True)\n",
-    "\n",
-    "# Write the csv\n",
-    "csv_utils.write_csv(bgt_data_file, parsed_content, csv_headers)"
+    "First, download and parse the required BGT data in notebook [1. Generate reference data](1.%Generate%20reference%20data.ipynb). "
    ]
   },
   {
@@ -268,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
