--- a/notebooks/1. AHN preprocessing.ipynb
+++ b/notebooks/1. AHN preprocessing.ipynb
@@ -101,9 +101,7 @@
    "id": "56a36c6c-fd39-478c-8b08-dfcb7622aad9",
    "metadata": {},
    "source": [
-    "## 1b. Clip all files in a folder\n",
-    "\n",
-    "Note: we only provide one file, so this serves mainly as a howto rather than a real demonstration."
+    "## 1b. Clip all files in a folder"
    ]
   },
   {
@@ -223,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
