Remove run info

--- a/notebooks/1. Generate reference data.ipynb
+++ b/notebooks/1. Generate reference data.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "incident-comfort",
+   "execution_count": null,
+   "id": "productive-median",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,13 @@
     "\n",
     "import src.scrapers.ams_bgt_scraper as ams_bgt_scraper\n",
     "import src.scrapers.ndw_scraper as ndw_scraper\n",
-    "import src.utils.las_utils as las_utils"
+    "import src.utils.las_utils as las_utils\n",
+    "import src.utils.csv_utils as csv_utils"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "prepared-cisco",
+   "id": "capital-employee",
    "metadata": {},
    "source": [
     "## Specify the bounding box of the area we want to scrape"
@@ -25,8 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "micro-democracy",
+   "execution_count": null,
+   "id": "consecutive-latvia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,8 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "overall-supply",
+   "execution_count": null,
+   "id": "arranged-crossing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "later-reader",
+   "id": "confident-hammer",
    "metadata": {},
    "source": [
     "## Scrape building footprint data from BGT"
@@ -56,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "directed-reach",
+   "execution_count": null,
+   "id": "duplicate-landscape",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,25 +70,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "contrary-briefs",
+   "execution_count": null,
+   "id": "tough-bradford",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypingError",
-     "evalue": "Failed in nopython mode pipeline (step: nopython frontend)\nNo implementation of function Function(<built-in function getitem>) found for signature:\n \n >>> getitem(reflected list(reflected list(float64)<iv=None>)<iv=None>, Tuple(slice<a:b>, Literal[int](0)))\n \nThere are 22 candidate implementations:\n     - Of which 22 did not match due to:\n     Overload of function 'getitem': File: <numerous>: Line N/A.\n       With argument(s): '(reflected list(reflected list(float64)<iv=None>)<iv=None>, Tuple(slice<a:b>, int64))':\n      No match.\n\nDuring: typing of intrinsic-call at /Users/ceijg/Documents/GitHub/Urban_PointCloud_Processing_vis/src/utils/math_utils.py (48)\nDuring: typing of static-get-item at /Users/ceijg/Documents/GitHub/Urban_PointCloud_Processing_vis/src/utils/math_utils.py (48)\n\nFile \"../src/utils/math_utils.py\", line 48:\ndef compute_bounding_box(points):\n    <source elided>\n    \"\"\"\n    min_x = np.min(points[:, 0])\n    ^\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypingError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-062319f60ee3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Parse the downloaded json response.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mparsed_content\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mams_bgt_scraper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparse_buildings\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson_response\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprepare_csv\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Write the csv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/GitHub/Urban_PointCloud_Processing_vis/src/scrapers/ams_bgt_scraper.py\u001b[0m in \u001b[0;36mparse_buildings\u001b[0;34m(json_response, prepare_csv)\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mprepare_csv\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 65\u001b[0;31m             \u001b[0mx_min\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_max\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_max\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_min\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompute_bounding_box\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpand_polygon\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     66\u001b[0m             parsed_content.append([str(pand_id), pand_polygon, x_min, y_max,\n\u001b[1;32m     67\u001b[0m                                   x_max, y_min])\n",
-      "\u001b[0;32m/opt/anaconda3/envs/point_cloud/lib/python3.8/site-packages/numba/core/dispatcher.py\u001b[0m in \u001b[0;36m_compile_for_args\u001b[0;34m(self, *args, **kws)\u001b[0m\n\u001b[1;32m    418\u001b[0m                 \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpatch_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    419\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 420\u001b[0;31m             \u001b[0merror_rewrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'typing'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    421\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mUnsupportedError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    422\u001b[0m             \u001b[0;31m# Something unsupported is present in the user code, add help info\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/envs/point_cloud/lib/python3.8/site-packages/numba/core/dispatcher.py\u001b[0m in \u001b[0;36merror_rewrite\u001b[0;34m(e, issue_type)\u001b[0m\n\u001b[1;32m    359\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    360\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 361\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    362\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    363\u001b[0m         \u001b[0margtypes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypingError\u001b[0m: Failed in nopython mode pipeline (step: nopython frontend)\nNo implementation of function Function(<built-in function getitem>) found for signature:\n \n >>> getitem(reflected list(reflected list(float64)<iv=None>)<iv=None>, Tuple(slice<a:b>, Literal[int](0)))\n \nThere are 22 candidate implementations:\n     - Of which 22 did not match due to:\n     Overload of function 'getitem': File: <numerous>: Line N/A.\n       With argument(s): '(reflected list(reflected list(float64)<iv=None>)<iv=None>, Tuple(slice<a:b>, int64))':\n      No match.\n\nDuring: typing of intrinsic-call at /Users/ceijg/Documents/GitHub/Urban_PointCloud_Processing_vis/src/utils/math_utils.py (48)\nDuring: typing of static-get-item at /Users/ceijg/Documents/GitHub/Urban_PointCloud_Processing_vis/src/utils/math_utils.py (48)\n\nFile \"../src/utils/math_utils.py\", line 48:\ndef compute_bounding_box(points):\n    <source elided>\n    \"\"\"\n    min_x = np.min(points[:, 0])\n    ^\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Scrape data from the Amsterdam WFS, this will return a json response.\n",
     "json_response = ams_bgt_scraper.scrape_amsterdam_bgt('BGT_PND_pand', bbox=bbox)\n",
@@ -101,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "utility-termination",
+   "id": "dietary-wildlife",
    "metadata": {},
    "source": [
     "## Scrape road information from BGT"
@@ -110,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "interim-colleague",
+   "id": "handmade-therapist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "renewable-commonwealth",
+   "id": "mature-chess",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "diverse-johnson",
+   "id": "opened-estate",
    "metadata": {},
    "source": [
     "## Scrape pole-like objects from BGT and NDW"
@@ -157,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "conditional-rescue",
+   "id": "federal-negotiation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rough-complement",
+   "id": "instant-substitute",
    "metadata": {},
    "outputs": [],
    "source": [
