Add text to README

--- a/notebooks/1. Generate reference data.ipynb
+++ b/notebooks/1. Generate reference data.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "beginning-webcam",
+   "metadata": {},
+   "source": [
+    "# Scrape reference data from public data sources\n",
+    "This notebook scrapes data from the Amsterdam BGT API and National Road Traffic Data Portal\n",
+    "(NDW). The documentation of both data sources can be found at:\n",
+    "- https://www.amsterdam.nl/stelselpedia/bgt-index/producten-bgt/prodspec-bgt-dgn-imgeo/\n",
+    "- https://docs.ndw.nu/api/trafficsigns/nl/index.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "productive-median",
