--- a/notebooks/2. Ground and Buildings.ipynb
+++ b/notebooks/2. Ground and Buildings.ipynb
@@ -122,7 +122,7 @@
    "metadata": {},
    "source": [
     "### [Alternative] Building fuser using BGT data\n",
-    "First, download and parse the required BGT data in notebook [1. Generate reference data](1.%Generate%20reference%20data.ipynb). "
+    "First, download and parse the required BGT data in notebook [1. Generate reference data](1.%20Generate%20reference%20data.ipynb). "
    ]
   },
   {
