--- a/notebooks/3. Cars.ipynb
+++ b/notebooks/3. Cars.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "source": [
     "## Car fuser based on cluster dimensions and BGT information\n",
-    "First, download and parse the required BGT data in notebook [1. Generate reference data](1.%Generate%20reference%20data.ipynb)."
+    "First, download and parse the required BGT data in notebook [1. Generate reference data](1.%20Generate%20reference%20data.ipynb)."
    ]
   },
   {
