--- a/notebooks/4. Pole-like objects.ipynb
+++ b/notebooks/4. Pole-like objects.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "source": [
     "## Set-up\n",
-    "First, download and parse the required BGT data in notebook [1. Generate reference data](1.%Generate%20reference%20data.ipynb). "
+    "First, download and parse the required BGT data in notebook [1. Generate reference data](1.%20Generate%20reference%20data.ipynb). "
    ]
   },
   {
