Update 1. Generate reference data.ipynb

--- a/notebooks/1. Generate reference data.ipynb
+++ b/notebooks/1. Generate reference data.ipynb
@@ -5,7 +5,7 @@
    "id": "beginning-webcam",
    "metadata": {},
    "source": [
-    "# Scrape reference data from public data sources\n",
+    "# Scrape and parse reference data from public data sources\n",
     "This notebook scrapes data from the Amsterdam BGT API and National Road Traffic Data Portal\n",
     "(NDW). The documentation of both data sources can be found at:\n",
     "- https://www.amsterdam.nl/stelselpedia/bgt-index/producten-bgt/prodspec-bgt-dgn-imgeo/\n",
