--- a/notebooks/3. Cars.ipynb
+++ b/notebooks/3. Cars.ipynb
@@ -70,7 +70,7 @@
    },
    "outputs": [],
    "source": [
-    "# Read NPZ file\n",
+    "# We need elevation data to determine object height above ground.\n",
     "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)\n",
     "\n",
     "# Car fuser using a clustering algorithm and BGT road data.\n",
