Update 1. Generate reference data.ipynb

--- a/notebooks/1. Generate reference data.ipynb
+++ b/notebooks/1. Generate reference data.ipynb
@@ -77,7 +77,9 @@
     "# Output file for the BGT fuser.\n",
     "bgt_data_file = '../datasets/bgt/bgt_buildings_demo.csv'\n",
     "csv_headers = ['building_id', 'polygon', 'x_min', 'y_max', 'x_max',\n",
-    "               'y_min']"
+    "               'y_min']\n",
+    "\n",
+    "bgt_layer = 'BGT_PND_pand'"
    ]
   },
   {
@@ -88,7 +90,7 @@
    "outputs": [],
    "source": [
     "# Scrape data from the Amsterdam WFS, this will return a json response.\n",
-    "json_response = ams_bgt_scraper.scrape_amsterdam_bgt('BGT_PND_pand', bbox=bbox)\n",
+    "json_response = ams_bgt_scraper.scrape_amsterdam_bgt(bgt_layer, bbox=bbox)\n",
     "\n",
     "# Parse the downloaded json response.\n",
     "parsed_content = ams_bgt_scraper.parse_buildings(json_response, prepare_csv=True)\n",
@@ -161,7 +163,10 @@
    "source": [
     "# Output file for the BGT fuser.\n",
     "bgt_data_file = '../datasets/bgt/custom_points_demo.csv'\n",
-    "csv_headers = ['Type', 'X', 'Y']"
+    "csv_headers = ['Type', 'X', 'Y']\n",
+    "\n",
+    "# BGT layers (without the traffic sign layer)\n",
+    "bgt_layers = ['BGTPLUS_PAL_lichtmast', 'BGTPLUS_VGT_boom']"
    ]
   },
   {
@@ -173,7 +178,7 @@
    "source": [
     "# Scrape tree and lamp post data from BGT and parse the json.\n",
     "bgt_point_objects_csv = []\n",
-    "for layer in ['BGTPLUS_PAL_lichtmast', 'BGTPLUS_VGT_boom']:\n",
+    "for layer in bgt_layers:\n",
     "    # Scrape data from the Amsterdam WFS, this will return a json response.\n",
     "    json_content = ams_bgt_scraper.scrape_amsterdam_bgt(layer, bbox=bbox)\n",
     "    \n",
