--- a/notebooks/5. Region growing.ipynb
+++ b/notebooks/5. Region growing.ipynb
@@ -20,8 +20,12 @@
     "# Add project src to path.\n",
     "import set_path\n",
     "\n",
+    "import numpy as np\n",
+    "\n",
     "import src.region_growing as growing\n",
     "import src.utils.ahn_utils as ahn_utils\n",
+    "import src.utils.las_utils as las_utils\n",
+    "import src.utils.math_utils as math_utils\n",
     "from src.region_growing.region_growing import RegionGrowing\n",
     "from src.utils.labels import Labels\n",
     "from src.pipeline import Pipeline"
@@ -89,9 +93,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Calculate the octree level for the tile\n",
+    "pointcloud = las_utils.read_las(in_file)\n",
+    "points = np.vstack((pointcloud.x, pointcloud.y, pointcloud.z)).T\n",
+    "octree_level = math_utils.get_octree_level(points, grid_size=0.05)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Region growing with building points as initial seed points. \n",
     "region_growing_clustering = growing.LabelConnectedComp(label=Labels.BUILDING,\n",
-    "                                                       grid_size=0.05,\n",
+    "                                                       octree_level=octree_level,\n",
     "                                                       min_component_size=100)"
    ]
   },
